workshop4/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dj-demo-crm-svc
  labels:
    app: dj-demo-crm
spec:
  ports:
  - port: 3000
    targetPort: 3000
  selector:
    app: dj-demo-crm
