workshop4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dj-demo-crm
spec:
  ingressClassName: nginx
  rules:
  - host: dj-demo-crm.myhost
    http:
      paths:
      - pathType: Prefix
        backend:
          service:
            name: dj-demo-crm-svc
            port:
              number: 3000
        path: /
